force-app/main/default/objects/DM_Bank_Account__c/DM_Bank_Account__c.object-meta.xml
<CustomObject>
    <label>DM Bank Account</label>
    <nameField>
        <label>DM Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>