force-app/main/default/objects/DM_Bank_Account__c/fields/DM_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>