force-app/main/default/objects/DM_Bank_Account__c/fields/DM_Active__c.field-meta.xml
<CustomField>
    <fullName>DM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Active</label>
    <type>Checkbox</type>
</CustomField>